[package]
name = "morbled"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.1"
colog = "1.3.0"
futures = "0.3.31"
log = "0.4.27"
systemd = { version = "0.10.0", features = ["bus"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
utf8-cstr = "0.1.6"

[lib]
name = "message"
path = "src/message.rs"

[[bin]]
name = "morbled"
path = "src/daemon.rs"

[[bin]]
name = "morblectl"
path = "src/client.rs"
